Fix icon display issue on iOS

--- a/static/scss/_icon-font.scss
+++ b/static/scss/_icon-font.scss
@@ -13,6 +13,7 @@
        url("/static/fonts/foundation-icons.svg#fontcustom") format("svg");
   font-weight: normal;
   font-style: normal;
+  text-rendering: optimizeLegibility;
 }
 
 .fi-address-book:before,
